[package]
name = "demoreel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "demoreel"
crate-type = ["cdylib", "lib"]


[[bin]]
name = "demo-json"
path = "src/bin.rs"

[dependencies]
hashbrown = { version = "0.14.5", features = ["raw"] }
bitbuffer = "0.10.9"
pyo3 = { version = "0.22.2", features = ["extension-module"]}
tf-demo-parser = { version = "0.5.1", features = ["schema"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_path = "0.7.1"
serde_arrow = { version = "0.12.3", features = ["arrow-54"] }
pythonize = "0.22.0"
pyo3-polars = { version = "0.16.0", features = ["dtype-full"] }
polars = { version = "=0.42.0", features = ["dtype-full", "serde"]}
polars-arrow = { version = "=0.42.0", features = ["arrow_rs"] }
arrow = "54"
itertools = "0.10.5"
clap = { version = "4.3.10", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
pyo3 = { version = "0.22.2", features = ["auto-initialize"] }
